# rashell

./: LICENSE.txt  README.md  pyproject.toml
examples/: movies.ra
src/rashell/: exceptions.py  rashell.py  relational_engine.py  relational_model.py
src/rashell/grammar_files/: rashell_grammar.tx  rashell_program_grammar.tx
